add: 插件运行时自动隐藏底部

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <style>
+  footer#colophon {display: none;}
   /* 音乐播放 */
   @-webkit-keyframes rotate{from{-webkit-transform:rotate(0)} to{-webkit-transform:rotate(360deg)} }
   @-moz-keyframes rotate{from{-moz-transform:rotate(0)} to{-moz-transform:rotate(360deg)} }
